// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fretboard component with skinType strings, snapshot 1`] = `
<ThemeProvider
  theme={
    Object {
      "background": "white",
      "dimensions": Object {
        "nutWidth": 1,
        "openWidth": 10,
        "stringHeight": 30,
      },
      "highlight": Object {
        "oct2": "blue",
        "oct3": "dodgerblue",
        "oct4": "lightblue",
        "oct5": "lightgray",
        "selected": "orange",
      },
    }
  }
>
  <styled.div
    height={180}
  >
    <ViewPortMain>
      <OpenPosition
        tuning={
          Array [
            "E2",
            "A2",
            "D3",
            "G3",
            "B3",
            "E4",
          ]
        }
        width={10}
      />
      <Nut
        offset={10}
        width={1}
      />
      <Board
        nrOfFrets={12}
        offset={11}
        skinType="strings"
        tuning={
          Array [
            "E2",
            "A2",
            "D3",
            "G3",
            "B3",
            "E4",
          ]
        }
        width={89}
      />
    </ViewPortMain>
  </styled.div>
</ThemeProvider>
`;

exports[`Fretboard component, snapshot 1`] = `
<ThemeProvider
  theme={
    Object {
      "background": "white",
      "dimensions": Object {
        "nutWidth": 1,
        "openWidth": 10,
        "stringHeight": 30,
      },
      "highlight": Object {
        "oct2": "blue",
        "oct3": "dodgerblue",
        "oct4": "lightblue",
        "oct5": "lightgray",
        "selected": "orange",
      },
    }
  }
>
  <styled.div
    height={180}
  >
    <ViewPortMain>
      <OpenPosition
        tuning={
          Array [
            "E2",
            "A2",
            "D3",
            "G3",
            "B3",
            "E4",
          ]
        }
        width={10}
      />
      <Nut
        offset={10}
        width={1}
      />
      <Board
        nrOfFrets={12}
        offset={11}
        skinType="boxes"
        tuning={
          Array [
            "E2",
            "A2",
            "D3",
            "G3",
            "B3",
            "E4",
          ]
        }
        width={89}
      />
    </ViewPortMain>
  </styled.div>
</ThemeProvider>
`;
